--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <span id="texttor">
 <H1 id="info2">
     <big>
-Trade naira Currency Anonymously with the most trusted & secure crypto wallets.
+Trade Crypto Currency Anonymously with the most trusted & secure crypto wallets.
     </big>
 <br/>
 <br/>
